Version 2.02.87 - 
===============================
  Remove lock from cache even if unlock fails.
  Initialise clvmd locks before lvm context to avoid open descriptor leaks.
  Remove obsoleted GULM clvmd cluster locking support.
  Suppress low-level locking errors and warnings while using --sysinit.
  Remove unused inconsistent_seqno variable in _vg_read().
  Remove meaningless const type qualifiers on cast type.
  Fix memory leak in dmsetup _message() memory allocation error path.
  Add test for fcntl error in singlenode client code.
  Remove --force option from lvrename manpage.
  Add missing new line in lvrename help text.
  Add basic support for RAID 1/4/5/6 (i.e. create, remove, display)
  Change DEFAULT_UDEV_SYNC to 1 so udev_sync is used even without any config.
  Add systemd unit file to provide lvm2 monitoring.
  Compare also file size to detect changed config file.

Version 2.02.86 - 8th July 2011
===============================
  Remove unnecessary warning in pvcreate for MD linear devices.
  Move snapshot removal activation logic into lib/activate.
  Cope with a PV only discovered missing when creating deptree.
  Abort operation if dm_tree_node_add_target_area fails.
  Add activation/checks to lvm.conf to perform additional ioctl validation.
  Always preload on suspend, even if no metadata changed (lvchange --refresh).
  When suspending, automatically preload newly-visible existing LVs.
  Teardown any stray devices with $COMMON_PREFIX during test runs.
  Reinstate correct permissions when creating mirrors. [2.02.85]
  Append 'm' attribute to pv_attr for missing PVs.
  Annotate CLVMD_CMD_SYNC_NAMES in decode_cmd.
  Remove enforcement of udev verification when using non-standard /dev location.
  Fix to preserve exclusive activation of mirror while up-converting.
  Reject allocation if number of extents is not divisible by area count.
  Fix cluster mirror creation to work with new mirror allocation algorithm.